Updating to get OAuth working
